# eicr-schematron-validation

./: README.md  main.py  pyproject.toml
eicr-validator/eicr/: eicr_covid.xml
eicr-validator/output/: eicr_covid_validation_report.svrl  stage1.sch.tmp  stage2.sch.tmp  validation_report.svrl  validator.xsl.tmp
schematron/: APHL_TextToCodeSchematron_09252025.sch  eicr_covid.xml  include.xsl  voc_ttc.xml
