[project]
name = "EICR-Schematron-Validation"
version = "0.1.0"
description = "A simple EICR Schematron validation tool using Saxon/C and schxslt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "saxonche==12.9.0",
]

[tool.ruff]
exclude = [".git", ".pytest_cache", "__pycache__", "docs"]
line-length = 100
indent-width = 4
target-version = "py312"
show-fixes = true
fix = true

[tool.ruff.lint]
select = ["ALL"]

ignore = ["D100", "T201", "S314"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
]
